src/main/resources/kubecl/keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
spec:
  tls:
    - hosts:
      - keycloak.127.0.0.1.nip.io
  rules:
  - host: keycloak.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: 8080
